<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenetics_sensors_home_background"
    tools:context=".View.AddBoardActivity">

    <ImageView
        android:id="@+id/back_button_add_board"
        android:layout_width="30dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bold"
        android:text="@string/add_board_title"
        android:textColor="#CB08482B"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button_add_board" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="299dp"
        android:layout_height="41dp"
        android:fontFamily="@font/light"
        android:text="@string/add_board_text"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/typeTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/typeTextView"
        app:layout_constraintTop_toBottomOf="@+id/typeTextView" />

    <EditText
        android:id="@+id/addBoardIdEditText"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/greenetics_edit_text"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="Enter your board ID"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="#A8FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/addBoardNameEditText"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenetics_edit_text"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="Choose a name for your board"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="#A8FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/addBoardIdEditText"
        app:layout_constraintStart_toStartOf="@+id/addBoardIdEditText"
        app:layout_constraintTop_toBottomOf="@+id/addBoardIdEditText" />

    <EditText
        android:id="@+id/addBoardDescriptionEditText"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenetics_edit_text"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="Describe your use case"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="#A8FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/addBoardNameEditText"
        app:layout_constraintStart_toStartOf="@+id/addBoardNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/addBoardNameEditText" />

    <ImageView
        android:id="@+id/addBoardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/greenetics_button_v2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_semi_bold"
        android:text="@string/connect_board"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/addBoardButton"
        app:layout_constraintEnd_toEndOf="@+id/addBoardButton"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/addBoardButton"
        app:layout_constraintTop_toTopOf="@+id/addBoardButton"
        app:layout_constraintVertical_bias="0.538" />

</androidx.constraintlayout.widget.ConstraintLayout>