<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenetics_background_v3"
    tools:context=".View.GreeneticsMainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="164dp"
        android:src="@drawable/greenetics_logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_light"
        android:text="@string/main_text"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <EditText
        android:id="@+id/emailAddressEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/greenetics_edit_text"
        android:ems="10"
        android:fontFamily="@font/source_sans_pro_regular"
        android:hint="Enter your e-mail address"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="#A8FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/greenetics_edit_text"
        android:ems="10"
        android:fontFamily="@font/source_sans_pro_regular"
        android:hint="Enter your password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="#A8FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/emailAddressEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailAddressEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressEditText" />

    <ImageView
        android:id="@+id/loginButtonItemView"
        android:layout_width="265dp"
        android:layout_height="85dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/greenetics_button_v2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/source_sans_pro_semi_bold"
        android:letterSpacing="0.05"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginButtonItemView"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/loginButtonItemView"
        app:layout_constraintTop_toTopOf="@+id/loginButtonItemView" />

    <TextView
        android:id="@+id/forgotPasswordButtonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/loginButtonItemView"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/loginButtonItemView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:letterSpacing="0.03"
        android:text="@string/not_registered_yet"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerButtonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_semi_bold"
        android:text="@string/register_here"
        android:textColor="#78D23D"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/typeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toEndOf="@+id/typeTextView"
        app:layout_constraintTop_toTopOf="@+id/typeTextView"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/greenhouse_dark_green"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButtonTextView"
        app:layout_constraintVertical_bias="0.292" />


</androidx.constraintlayout.widget.ConstraintLayout>