<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenetics_sensors_home_background"
    android:fitsSystemWindows="true"
    tools:context=".View.GreeneticsHomeActivity"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/greenhouse_primary"
            android:elevation="4dp"
            app:popupTheme="@style/Theme.Design.NoActionBar"
            app:theme="@style/ToolBarStyle"
            app:titleMarginStart="85dp"
            app:titleTextColor="@color/white" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/board_list_loading_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/greenhouse_dark_green"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.522" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_view"
                    android:layout_width="386dp"
                    android:layout_height="439dp"
                    app:layout_constraintBottom_toTopOf="@+id/add_button_home_page"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.428"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.782"
                    tools:listitem="@layout/greenhouse_modules_recycler_view" />


                <ImageView
                    android:id="@+id/no_device_connected_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/greenhouse_green"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.466" />

                <TextView
                    android:id="@+id/no_device_connected_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/source_sans_pro_light"
                    android:letterSpacing="0.1"
                    android:text="NO DEVICE CONNECTED"
                    android:textColor="#99072E1D"
                    android:textSize="25sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/no_device_connected_image"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="@+id/no_device_connected_image"
                    app:layout_constraintTop_toBottomOf="@+id/no_device_connected_image" />

                <ImageView
                    android:id="@+id/add_button_home_page"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/add_button_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/greenhouse_primary"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/white"
        app:itemTextAppearance="@style/GreenhouseTextViewStyle"
        app:itemTextColor="#B2FFFFFF"
        app:menu="@menu/drawer_menu" />


</androidx.drawerlayout.widget.DrawerLayout>